@@ -92,11 +92,23 @@ func inputsMap(cfgInputs interface{}, l *logger.Logger) []map[string]interface{}
 
 	inputsMap := make([]map[string]interface{}, 0, len(inputsSet))
 	for _, s := range inputsSet {
-		mm, ok := s.(map[string]interface{})
-		if !ok {
+		switch mm := s.(type) {
+		case map[string]interface{}:
+			inputsMap = append(inputsMap, mm)
+		case map[interface{}]interface{}:
+			newMap := make(map[string]interface{})
+			for k, v := range mm {
+				key, ok := k.(string)
+				if !ok {
+					continue
+				}
+
+				newMap[key] = v
+			}
+			inputsMap = append(inputsMap, newMap)
+		default:
 			continue
 		}
-		inputsMap = append(inputsMap, mm)
 	}
 
 	return inputsMap
@@ -188,7 +200,7 @@ func (c *multiInputsCapability) Apply(in interface{}) (interface{}, error) {
 
 	inputsMap, err = c.cleanupInput(inputsMap)
 	if err != nil {
-		c.log.Errorf("cleaning up config object failed for capability 'multi-outputs': %v", err)
+		c.log.Errorf("cleaning up config object failed for capability 'multi-inputs': %v", err)
 		return in, nil
 	}
 
